# nignxui

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build-deb.yml
package/DEBIAN/: control
package/usr/share/applications/: ngui.desktop
src/: main.c  nginx_file.c  nginx_hosts.c  nginx_ui.c  nginx_ui.h
